# agent_workflow

./: PACKAGE.md  README.md  mypy.ini  pyproject.toml  setup.py
agent_workflow/: __init__.py
agent_workflow/expressions/: __init__.py  expressions.py
agent_workflow/parsers/: __init__.py  parsers.py
agent_workflow/providers/: README.md  __init__.py  callbacks.py  llm_observability.py  llm_tracing_utils.py  mcp.py  observability.py  openai_observability.py  providers.py  tools.py
agent_workflow/workflow_engine/: __init__.py  agents.py  execution_engine.py  models.py  workflow_manager.py
agent_workflow/workflow_engine/execution_engines/: __init__.py  base.py
agent_workflow/workflow_engine/execution_engines/openai/: GeminiAdapter.py  OpenAIAgentAdapter.py  __init__.py  openai.py  openai_hooks.py
agent_workflow/yaml_schema/: __init__.py  agent_schema.yaml  workflow_schema.yaml
tests/: conftest.py  test_agents.py  test_langfuse_observability.py  test_models.py  test_openai_observability.py  test_response_store.py  test_tools.py  test_workflow_engine.py
usage_examples/dev_MCP/: local_memory_mcp_server.py  unified_mcp_assistant.py  unified_mcp_workflow.yaml
usage_examples/dev_workflow/: api_design_agent.yaml  db_design_agent.yaml  dev_workflow.py  engine_selection_example.py  plan_agent.yaml  product_dev_workflow_example.yaml  ui_design_agent.yaml  unified_mcp_assistant.py  unified_mcp_workflow.yaml
usage_examples/handoffs_example/: handoffs_config.yaml  handoffs_config2.yaml  handoffs_ex.py  qa_agent.yaml  test_handoff.py  translation_agent.yaml
usage_examples/journalism_workflow/: headline_agent.yaml  image_search_agent.yaml  journalism_workflow.yaml  related_articles_agent.yaml  run_journalism_workflow.py  seo_agent.yaml  summary_agent.yaml
usage_examples/mcp_usage/: mcp_example.py  mcp_example_sse.py  mcp_workflow_example.yaml  mcp_workflow_sse_example.yaml
usage_examples/playwright_mcp_example/: custom_playwright_tools.py  playwright_mcp_example.py  playwright_mcp_workflow_example.yaml
usage_examples/tool_usage/: langfuse_observability.py  progress_callback_example.py  tool_example.py  tool_workflow_example.yaml
usage_examples/user_input/: simple_user_input.py  user_input_workflow_example.yaml
usage_examples/wsj_article/: run_wsj_finder.py  wsj_article_workflow.yaml  wsj_finder_agent.yaml  wsj_tools.py
workflow-builder/: README.md  index.html  package-lock.json  package.json  start.sh
workflow-builder/public/samples/: example_workflow.yaml  writer_agent.yaml
workflow-builder/src/: App.tsx  main.tsx
workflow-builder/src/components/: AgentEditor.tsx  WorkflowContext.tsx  WorkflowEditor.tsx
workflow-builder/src/components/dialogs/: AddStageDialog.tsx  (+2 more)
workflow-builder/src/utils/: file-utils.ts  yaml-converter.ts
(+6 files in other folders)
